Modify UI, Add Plugin

--- a/console/front/src/pages/Login/Login.scss
+++ b/console/front/src/pages/Login/Login.scss
@@ -9,7 +9,7 @@ body {
   .main-part {
     width: 100%;
     height: 100vh;
-    background-color: $primary;
+    background-color: $text-grey;
     display: flex;
     flex-direction: column;
     justify-content: center;
